Fix text vertical align middle on safari

--- a/src/components/company/company.scss
+++ b/src/components/company/company.scss
@@ -81,7 +81,11 @@
 					width: 100%;
 					display: inline-block;
 					text-align: center;
-					transform: translateY(-50%);
+					transform: translate(0, -50%);
+					-webkit-transform: translate(0, -50%);
+					-moz-transform: translate(0, -50%);
+					-ms-transform: translate(0, -50%);
+					-o-transform: translate(0, -50%);
 				}
 			}
 		}
@@ -130,22 +134,22 @@
 				position: absolute;
 				top: 50%;
 				left: -3px;
-				transform: translateY(-50%);
-				-webkit-transform: translateY(-50%);
-				-moz-transform: translateY(-50%);
-				-ms-transform: translateY(-50%);
-				-o-transform: translateY(-50%);
+				transform: translate(0, -50%);
+				-webkit-transform: translate(0, -50%);
+				-moz-transform: translate(0, -50%);
+				-ms-transform: translate(0, -50%);
+				-o-transform: translate(0, -50%);
 				@extend .font-extra;
 				color: $color-bg;
 				@include breakpoint(mobile) {
 					position: relative;
 					top: auto;
 					left: auto;
-					transform: translateY(0);
-					-webkit-transform: translateY(0);
-					-moz-transform: translateY(0);
-					-ms-transform: translateY(0);
-					-o-transform: translateY(0);
+					transform: translate(0);
+					-webkit-transform: translate(0);
+					-moz-transform: translate(0);
+					-ms-transform: translate(0);
+					-o-transform: translate(0);
 					transform: translate(0);
 					padding-bottom: 10px;
 				}
